@@ -1,2 +1,4 @@
 # List of source files containing translatable strings.
-src/main.c
+src/blkimage.c
+src/c16image.c
+src/s16image.c
