@@ -2,14 +2,22 @@
 
 VERSION_FLAGS = -DVERSION=\"@PLUGIN_VERSION@\"
 
-bin_PROGRAMS = creatures-sprites
+bin_PROGRAMS = blkimage c16image s16image
 
 bindir = $(GIMP_PLUGIN_DIR)/plug-ins
 
-creatures_sprites_SOURCES = \
+blkimage_SOURCES = \
 	plugin-intl.h	\
-	main.c		\
-	main.h		
+	blkimage.c 
+
+c16image_SOURCES = \
+	plugin-intl.h	\
+	c16image.c 
+
+s16image_SOURCES = \
+	plugin-intl.h	\
+	s16image.c 
+
 
 INCLUDES = \
 	-I$(top_srcdir)/intl \
